--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 buildscript {
     repositories {
         google()
@@ -7,8 +7,6 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.2"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
@@ -16,7 +14,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        jcenter() // Warning: this repository is going to shut down soon
+        jcenter() 
     }
 }
 
